<resources>
    <string name="app_name">HocTextViewEditTextButton</string>
    <string name="tittle">Registration Form</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Password Again</string>
    <string name="btnRegister">Register</string>
    <string name="hintPass">Mat khau co do dai tu 5 - 10 ky tu</string>
    <string name="hintEmail">thuanle@gmail.com</string>
    <string name="hintLastName">Le Van</string>
    <string name="hintFirstName">Thuan</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btnLogin">"Login"</string>

</resources>
