<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login2Activity"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_gravity="left"
            android:background="#2196F3"
            android:text="@string/btnLogin"
            android:textColor="#FDFDFD"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_marginLeft="160sp"
            android:background="#03A9F4"
            android:text="@string/btnRegister"
            android:textColor="#FDFDFD"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>